--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,9 +2,39 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  color:darkred;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+  
+}
+
+p {
+  color: palevioletred;
+  font-size: 20px;
+  font-family: “Times New Roman”, serif;
+}
+
+h1 {
+  
+font-size: 60px;
+font-family: Georgia, “Times New Roman”, serif;
+text-align: center;
+font-weight: bold;
+font-style: italic;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:60%;
+  height: auto;
+  
+}
+
+footer{
+  text-align: center;
 }
